<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/team_selection_dialog_text" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/team_one_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <AutoCompleteTextView
            android:id="@+id/team_one_edit_text"
            style="@style/onboard_dialog_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_one"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/team_two_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <AutoCompleteTextView
            android:id="@+id/team_two_edit_text"
            style="@style/onboard_dialog_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_two"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/team_three_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <AutoCompleteTextView
            android:id="@+id/team_three_edit_text"
            style="@style/onboard_dialog_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_three"
            android:inputType="text"
            android:imeOptions="actionDone"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/football_header_orange_gradient"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>