<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/football_feed_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>

