<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/spinner_item_color"
    android:orientation="vertical">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/spinnerDropdownTextView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:singleLine="true"
        android:text="All"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/white" />
</LinearLayout>